--- a/purchase_order_default_notes/views/settings_purchase_order.xml
+++ b/purchase_order_default_notes/views/settings_purchase_order.xml
@@ -6,9 +6,9 @@
             <field name="model">res.config.settings</field>
             <field name="inherit_id" ref="purchase.res_config_settings_view_form_purchase" />
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='group_warning_purchase']" position="after">
+                <xpath expr="//div[@data-key='purchase']" position="inside">
                     <field name="acuerdo_de_compra" string="Acuerdos De Compra Por Defecto" />                    
-                </xpath>                
+                </xpath>
             </field>
         </record>
 	</data>
