--- a/purchase_order_default_notes/views/settings_purchase_order.xml
+++ b/purchase_order_default_notes/views/settings_purchase_order.xml
@@ -7,7 +7,18 @@
             <field name="inherit_id" ref="purchase.res_config_settings_view_form_purchase" />
             <field name="arch" type="xml">
                 <xpath expr="//div[@data-key='purchase']" position="inside">
-                    <field name="acuerdo_de_compra" string="Acuerdos De Compra Por Defecto" />                    
+                    <h2>Acuerdos De Compra</h2>
+                    <div class="row mt16 o_settings_container">
+                        <div class="col-12 col-lg-12 o_setting_box">
+                            <div class="col-12 col-lg-12 o_setting_right_pane">
+                                <label for="acuerdo_de_compra"/>
+                                <div class="text-muted">
+                                    Terminos y Condiciones
+                                </div>
+                                <field name="acuerdo_de_compra" class="o_light_label" />
+                            </div>
+                        </div>
+                    </div>
                 </xpath>
             </field>
         </record>
