--- a/purchase_order_report_formats/views/purchase_order_nuevo_formato_reprte.xml
+++ b/purchase_order_report_formats/views/purchase_order_nuevo_formato_reprte.xml
@@ -64,34 +64,34 @@
                             <div class="row">
                                 <div class="col-5">
                                     <t t-if="o.company_id">
-                                        <span style= "font-size:13.5px; color:#454545;" >Dirección de Envío</span>
+                                        <span style= "font-size:13.5px; color:#2A2A2A;" >Dirección de Envío</span>
+                                        <br/>
                                         <span style= "font-size:13.5px; color:#454545;" t-field="o.company_id.name"></span>
                                         <br/>
                                     </t>
                                     <t t-if="o.company_id.phone">
-                                        <span style= "font-size:13.5px; color:#454545;" >Dirección de Envío</span>
                                         <span style= "font-size:13.5px; color:#454545;" t-field="o.company_id.phone"></span>
                                         <br/>
                                     </t>
                                     <br/><br/>
                                     <t t-if="o.state in ('draft','sent','to approve')">
-                                        <span style= "font-weight: bold;font-size:13.5px">Solicitud de presupuesto #</span>
+                                        <span style= "font-weight: normal;font-size:13.5px">Solicitud de presupuesto #</span>
                                         <span style= "font-weight: bold;font-size:13.5px" t-field="o.name"></span>
                                         <br/><br/>
                                     </t>
                                     <t t-if="o.state in ('purchase','done','cancel')">
-                                        <span style= "font-weight: bold;font-size:13.5px">Pedido de compra #</span>
+                                        <span style= "font-weight: normal;font-size:13.5px">Pedido de compra #</span>
                                         <span style= "font-weight: bold;font-size:13.5px" t-field="o.name"></span>
                                         <br/><br/>
                                     </t>
 
                                     <t t-if="o.date_order">
-                                        <span style= "font-size:13.5px; color:#454545;" >Fecha de orden:</span>
+                                        <span style= "font-size:13.5px; color:#2A2A2A;" >Fecha de orden:</span>
                                         <span style= "font-size:13.5px; color:#454545;" t-field="o.date_order"></span>
                                         <br/>
                                     </t>
                                     <t t-if="o.date_planned">
-                                        <span style= "font-size:13.5px; color:#454545;" >Fecha de Recepción:</span>
+                                        <span style= "font-size:13.5px; color:#2A2A2A;" >Fecha de Recepción:</span>
                                         <span style= "font-size:13.5px; color:#454545;" t-field="o.date_planned"></span>
                                         <br/>
                                     </t>
@@ -108,43 +108,47 @@
                                         <br/>
                                     </t>
                                     <t t-if="o.partner_id.vat">
-                                        <span style= "font-size:13.5px; color:#454545;" >RUC:</span>
+                                        <span style= "font-size:13.5px; color:#2A2A2A;" >RUC: </span>
                                         <span style= "font-size:13.5px; color:#454545;" t-field="o.partner_id.vat"></span>
                                         <br/>
                                     </t>
 
                                     <t t-if="o.partner_id.phone">
-                                        <span style= "font-size:13.5px; color:#454545;" >telefono:</span>
+                                        <span style= "font-size:13.5px; color:#2A2A2A;" >Telefono: </span>
                                         <span style= "font-size:13.5px; color:#454545;" t-field="o.partner_id.phone"></span>
                                         <br/>
                                     </t>
                                     <t t-if="o.partner_id.mobile">
-                                        <span style= "font-size:13.5px; color:#454545;" >telefono:</span>
+                                        <span style= "font-size:13.5px; color:#2A2A2A;" >Celular: </span>
                                         <span style= "font-size:13.5px; color:#454545;" t-field="o.partner_id.mobile"></span>
                                         <br/>
                                     </t>
                                     <t t-if="o.partner_id.email">
+                                        <span style= "font-size:13.5px; color:#2A2A2A;" >Email: </span>
                                         <span style= "font-size:13.5px; color:#454545;" t-field="o.partner_id.email"></span>
                                         <br/>
                                     </t>
                                     <t t-if="o.partner_id.street">
+                                        <span style= "font-size:13.5px; color:#2A2A2A;" >Dirrección:</span>
                                         <span style= "font-size:13.5px; color:#454545;" t-field="o.partner_id.street"></span>
                                         <br/>
                                     </t>
                                     <t t-if="o.payment_term_id">
-                                        <span style= "font-size:13.5px; color:#454545;" >Plazo de pago: </span>
+                                        <span style= "font-size:13.5px; color:#2A2A2A;" >Plazo de pago: </span>
                                         <span style= "font-size:13.5px; color:#454545;" t-field="o.payment_term_id.name"></span>
                                         <br/>
                                     </t>
                                     
+
+
                                     
                                     <t t-if="o.user_id">
-                                        <span style= "font-size:13.5px; color:#454545;" >Solicitante:  </span>
+                                        <span style= "font-size:13.5px; color:#2A2A2A;" >Solicitante:  </span>
                                         <span style= "font-size:13.5px; color:#454545;" t-field="o.user_id.name"></span>
                                         <br/>
                                     </t>
                                     <t t-if="o.requisition_id">
-                                        <span style= "font-size:13.5px; color:#454545;" >Acuerdo de compra:  </span>
+                                        <span style= "font-size:13.5px; color:#2A2A2A;" >Acuerdo de compra:  </span>
                                         <span style= "font-size:13.5px; color:#454545;" t-field="o.requisition_id.name"></span>
                                         <br/>
                                     </t>
@@ -167,11 +171,8 @@
 <t t-if="o.order_line">
     <table>
         <tbody>
-            <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+            <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
             <tr>
-                <td style="border-width: thin;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:16px; text-align: center;">
-                    <center style="font-size:17.5px;font-weight: bold;" >Ítem</center>
-                </td>
                 <td style="border-width: thin;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:16px; text-align: center;">
                     <center style="font-size:17.5px;font-weight: bold;" >Codigo</center>
                 </td>
@@ -196,40 +197,37 @@
             <t t-foreach="o.order_line" t-as="linea" >
                 <t t-if="contador == len(o.order_line)">
                     <tr>
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
-                        <span style="color:#454545;" t-esc="contador"/>
-                    </td>
 
-                    <td style="border-width: thin;border-left-style: ridge;border-bottom-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-bottom-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
                         <t t-if="linea.product_id.default_code">
                             <span style="color:#454545;" t-field="linea.product_id.default_code"/>
                         </t>
                     </td>
 
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
                         <t t-if="linea.name">
                             <SPAN t-esc="linea.name if linea.name == linea.product_id.name_get()[0][1] else linea.name.replace(linea.product_id.name_get()[0][1],'')"/>
                         </t>
                     </td>
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:16px; text-align: center;">
                         <t t-if="linea.date_planned">
                             <span style="color:#454545;" t-field="linea.date_planned"/>
                         </t>
                     </td>
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
                         <t t-if="linea.product_qty">
-                            <span style="color:#454545;" t-esc="linea.product_uom.name" />
+                            <span style="color:#454545;" t-esc="linea.product_qty" />
                         </t>
                         <t t-if="linea.product_uom">
                             <span style="color:#454545;" t-esc="linea.product_uom.name" />
                         </t>
                     </td>
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
                         <t t-if="linea.price_unit">
-                            <span style="color:#454545;" t-esc="linea.price_unit"/>
+                            <span style="color:#454545;" t-field="linea.price_unit"/>
                         </t>
                     </td>
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
                         <t t-if="linea.price_subtotal">
                             <span style="color:#454545;" t-esc="o.currency_id.symbol +str('%.2f'%linea.price_subtotal)"/>
                         </t>
@@ -240,40 +238,37 @@
                 <t t-if="contador &lt; len(o.order_line)">
 
                 <tr>
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
-                        <span style="color:#454545;" t-esc="contador"/>
-                    </td>
 
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
                         <t t-if="linea.product_id.default_code">
                             <span style="color:#454545;" t-field="linea.product_id.default_code"/>
                         </t>
                     </td>
 
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
                         <t t-if="linea.name">
                             <SPAN t-esc="linea.name if linea.name == linea.product_id.name_get()[0][1] else linea.name.replace(linea.product_id.name_get()[0][1],'')"/>
                         </t>
                     </td>
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: center;">
                         <t t-if="linea.date_planned">
                             <span style="color:#454545;" t-field="linea.date_planned"/>
                         </t>
                     </td>
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
                         <t t-if="linea.product_qty">
-                            <span style="color:#454545;" t-esc="linea.product_uom.name" />
+                            <span style="color:#454545;" t-esc="linea.product_qty" />
                         </t>
                         <t t-if="linea.product_uom">
                             <span style="color:#454545;" t-esc="linea.product_uom.name" />
                         </t>
                     </td>
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
                         <t t-if="linea.price_unit">
-                            <span style="color:#454545;" t-esc="linea.price_unit"/>
+                            <span style="color:#454545;" t-field="linea.price_unit"/>
                         </t>
                     </td>
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
                         <t t-if="linea.price_subtotal">
                             <span style="color:#454545;" t-esc="o.currency_id.symbol +str('%.2f'%linea.price_subtotal)"/>
                         </t>
@@ -290,26 +285,26 @@
             <tbody>
                 <tr><td></td><td></td></tr>
                 <tr>
-                    <td style="border-width: thin;border-left-style: solid;border-right-style: solid;border-top-style: solid; font-weight: bold; font-size:16px; text-align: left; min-width: 55px; min-height: 55px;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: solid;border-right-style: solid;border-top-style: solid; font-weight: bold; font-size:16px; text-align: left; min-width: 55px; min-height: 55px;">
                         <span>Subtotal</span>
                     </td>
-                    <td style="border-width: thin;border-left-style: solid;border-right-style: solid;border-top-style: solid; font-weight: normal; font-size:16px; text-align: right; min-width: 55px; min-height: 55px;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: solid;border-right-style: solid;border-top-style: solid; font-weight: normal; font-size:16px; text-align: right; min-width: 55px; min-height: 55px;">
                         <span style="color:#454545;" t-esc="o.currency_id.symbol +str('%.2f'%o.amount_untaxed)"/>
                     </td>
                 </tr>
                 <tr>
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: bold; font-size:16px; text-align: left;">
+                    <td style="color:#454545;padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
                         <span>Impuestos</span>
                     </td>
-                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
+                    <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
                         <span style="color:#454545;" t-esc="o.currency_id.symbol +str('%.2f'%o.amount_tax)"/>
                     </td>
                 </tr>
                 <tr>
-                    <td style="color:#FFFFFF; background-color: black;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: bold; font-size:16px; text-align: left;">
+                    <td style="padding: 10px;color:#FFFFFF; background-color: black;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: bold; font-size:16px; text-align: left;">
                         <span>Total</span>
                     </td>
-                    <td style="color:#FFFFFF; background-color: black;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
+                    <td style="padding: 10px;color:#FFFFFF; background-color: black;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
                         <span t-esc="o.currency_id.symbol +str('%.2f'%o.amount_total)"/>
                     </td>
                 </tr>        
