--- a/sale_order_report_formats/views/sale_order_nuevo_formato_reporte.xml
+++ b/sale_order_report_formats/views/sale_order_nuevo_formato_reporte.xml
@@ -84,12 +84,12 @@
                             
                             <br/><br/>
                             <t t-if="o.state in ('draft','sent')">
-                                <span style= "font-weight: bold;font-size:18px;font-family: Arial;">Cotización # </span>
+                                <span style= "font-size:18px;font-family: Arial;">Cotización #</span>
                                 <span style= "font-weight: bold;font-size:18px;font-family: Arial;" t-field="o.name"></span>
                                 <br/><br/>
                             </t>
                             <t t-if="o.state in ('sale','done','cancel')">
-                                <span style= "font-weight: bold;font-size:18px;font-family: Arial;">Pedido # </span>
+                                <span style= "font-size:18px;font-family: Arial;">Pedido #</span>
                                 <span style= "font-weight: bold;font-size:18px;font-family: Arial;" t-field="o.name"></span>
                                 <br/><br/>
                             </t>
@@ -110,28 +110,31 @@
                                         </t>
                                     </t>
                                 </div>
-                                <div class="col-3">
-                                    <t t-if="o.validity_date">
+                                
+                                <t t-if="o.validity_date">
+                                    <div class="col-3">
                                         <span style="font-weight: bold; font-size:18px;font-family: Arial;">Fecha de caducidad:</span>
                                         <br/>
                                         <span style="font-weight: normal; font-size:18px; color:#454545;font-family: Arial;" t-esc="o.validity_date"></span>
-                                    </t>
-                                </div>
+                                    </div>
+                                </t>
 
-                                <div class="col-3">
-                                    <t t-if="o.user_id">
+                                
+                                <t t-if="o.user_id">
+                                    <div class="col-3">
                                         <span style="font-weight: bold; font-size:18px;font-family: Arial;">Comercial:</span>
                                         <br/>
                                         <span style="font-weight: normal; font-size:18px; color:#454545;font-family: Arial;" t-field="o.user_id"></span>
-                                    </t>
-                                </div>
-                                <div class="col-3">
-                                    <t t-if="o.payment_term_id">
+                                    </div>
+                                </t>
+                                
+                                <t t-if="o.payment_term_id">
+                                    <div class="col-3">
                                         <span style="font-weight: bold; font-size:18px;font-family: Arial;">Plazo de pago:</span>
                                         <br/>
                                         <span style="font-weight: normal; font-size:18px; color:#454545;font-family: Arial;" t-field="o.payment_term_id.name"></span>
-                                    </t>
-                                </div>
+                                    </div>
+                                </t>
                             </div>
                             <br/>
 
@@ -261,8 +264,10 @@
                                                     <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: bold; font-size:18px; text-align: left;font-family: Arial;padding: 10px;">
                                                         
                                                         <span t-esc="linea_tax[0]"/>
+                                                        <span t-esc="en + o.pricelist_id.currency_id.symbol +str('%.2f'%o.amount_total)"/>
                                                     </td>
                                                     <td style="background-color: #D5D4D4;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: normal; font-size:18px;font-family: Arial; text-align: right;padding: 10px;">
+                                                        <span t-esc="o.pricelist_id.currency_id.symbol"/>
                                                         <span t-esc="linea_tax[1]"/>
                                                     </td>
                                                 </tr>
