--- a/purchase_order_report_formats/views/purchase_order_nuevo_formato_reprte.xml
+++ b/purchase_order_report_formats/views/purchase_order_nuevo_formato_reprte.xml
@@ -223,7 +223,7 @@
                     </td>
                     <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
                         <t t-if="linea.price_unit">
-                            <span style="color:#454545;" t-esc="format(linea.price_unit,'.5f')"/>
+                            <span style="color:#454545;" t-esc="linea.price_unit"/>
                         </t>
                     </td>
                     <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
@@ -268,7 +268,7 @@
                     </td>
                     <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
                         <t t-if="linea.price_unit">
-                            <span style="color:#454545;" t-esc="format(linea.price_unit,'.5f')"/>
+                            <span style="color:#454545;" t-esc="linea.price_unit"/>
                         </t>
                     </td>
                     <td style="padding: 10px;border-width: thin;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
